--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,47 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+p {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 0.875em;
+  line-height: 1.25em;
+}
+.btn {
+  border: 3px solid #fec63e;
+  padding: 10px 30px;
+  color: #fec63e;
+  font-size: 0.875em;
+  letter-spacing: 0.1em;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.btn:hover {
+  color: #fff;
+  border-color: #fff;
+  transition: 0.3s;
+}
+.btn-preto:hover {
+  color: #000000;
+  border-color: #000000;
+  transition: 0.3s;
+}
+.sub-titulo {
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #000;
+  letter-spacing: 0.1em;
+  text-align: center;
+  font-size: 1.5em;
+  margin-bottom: 40px;
+}
+.sub-titulo::after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background-color: #000;
+  margin: 15px auto 10px auto;
+}
 /* Estilo do header */
 .header {
   width: 100%;
@@ -9,6 +50,7 @@ body {
   padding: 15px 0;
   position: fixed;
   top: 0;
+  z-index: 1;
 }
 .header_menu {
   text-align: right;
@@ -18,7 +60,6 @@ body {
   margin-left: 20px;
   margin-top: 23px;
 }
-
 .header_menu ul li a {
   color: #000;
   font-weight: bold;
@@ -31,4 +72,82 @@ body {
 .header_menu ul li a:hover {
   color: #fff;
   transition: 0.5s;
+}
+
+/* introdução */
+.introducao {
+  width: 100%;
+  background: url("../img/bg.jpg") no-repeat center;
+  background-size: cover;
+  margin-top: 96px;
+  height: 380px;
+  text-align: center;
+  padding-top: 80px;
+  color: #fff;
+}
+.introducao h1 {
+  font-size: 3em;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.quote-externo {
+  max-width: 320px;
+  margin: 0 auto 40px auto;
+}
+.quote-externo p {
+  font-style: italic;
+}
+.quote-externo p::before,
+.quote-externo p::after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background-color: #fff;
+  margin: 15px auto 10px auto;
+}
+.quote-externo cite {
+  font-style: normal;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+}
+
+/* Produtos */
+.produtos {
+  padding: 90px 0;
+}
+.produtos_lista li {
+  background: #fec63e;
+  text-align: center;
+}
+.produtos_lista li h3 {
+  font-weight: bold;
+  font-size: 1.125em;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  margin-top: 10px;
+}
+.produtos_lista li h3:after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background-color: #000;
+  margin: 15px auto 10px auto;
+}
+.produtos_lista div {
+  background: #000;
+  padding: 20px;
+}
+.produtos_lista li p {
+  padding: 10px 20px 20px 20px;
+}
+.chamativo {
+  text-align: center;
+  clear: both;
+  padding-top: 40px;
+}
+.chamativo p {
+  margin-bottom: 20px;
+  font-weight: bold;
 }
