--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ p {
   font-size: 0.875em;
   line-height: 1.25em;
 }
+img {
+  display: block;
+}
 .btn {
   border: 3px solid #fec63e;
   padding: 10px 30px;
@@ -79,10 +82,9 @@ p {
   width: 100%;
   background: url("../img/bg.jpg") no-repeat center;
   background-size: cover;
-  margin-top: 96px;
-  height: 380px;
+  margin-top: 92px;
   text-align: center;
-  padding-top: 80px;
+  padding: 160px 0;
   color: #fff;
 }
 .introducao h1 {
@@ -150,4 +152,60 @@ p {
 .chamativo p {
   margin-bottom: 20px;
   font-weight: bold;
+}
+/* portfolio */
+.portfolio {
+  width: 100%;
+  background-color: #000;
+  padding: 40px 0;
+  color: #fff;
+}
+.portfolio .sub-titulo {
+  color: #fec63e;
+}
+.portfolio .sub-titulo::after {
+  background-color: #fec63e;
+}
+.portfolio ul li:last-child {
+  margin-top: 20px;
+}
+/* qualidade */
+.qualidade {
+  padding: 60px 0;
+}
+.qualidade::after {
+  content: "";
+  width: 634px;
+  height: 83px;
+  display: block;
+  background: url("../img/linhas.svg") no-repeat center;
+  position: absolute;
+  top: 212px;
+  right: 162px;
+  z-index: -1;
+}
+.qualidade img {
+  margin: 0 auto;
+}
+.qualidade-lista {
+  padding-top: 20px;
+}
+.qualidade-lista li {
+  text-align: center;
+  padding: 0 40px;
+}
+.qualidade-lista li h3 {
+  font-weight: bold;
+  font-size: 1.125em;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  margin-top: 10px;
+}
+.qualidade-lista li h3:after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background-color: #000;
+  margin: 15px auto 10px auto;
 }
