--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,44 @@ img {
   font-weight: bold;
   letter-spacing: 0.1em;
 }
-
+/* introducao interna */
+.introducao-interna {
+  margin-top: 92px;
+  width: 100%;
+  height: 160px;
+  color: #fff;
+  text-align: center;
+  padding-top: 30px;
+}
+.introducao-interna h1 {
+  font-size: 2.25em;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.introducao-interna h1::after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background-color: #fff;
+  margin: 6px auto 10px auto;
+}
+.subtitulo-interno {
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #000;
+  letter-spacing: 0.1em;
+  font-size: 1.5em;
+  margin-bottom: 20px;
+}
+.subtitulo-interno::after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background-color: #000;
+  margin: 8px 0;
+}
 /* Produtos */
 .produtos {
   padding: 90px 0;
@@ -208,4 +245,82 @@ img {
   height: 3px;
   background-color: #000;
   margin: 15px auto 10px auto;
+}
+/* quebra */
+.quebra {
+  height: 220px;
+  width: 100%;
+  background: url("../img/bg-footer.jpg") no-repeat center;
+  background-size: cover;
+  color: #fff;
+  text-align: center;
+}
+/* footer */
+.footer {
+  background: #000;
+  padding: 20px 0;
+  color: #fff;
+  text-align: justify;
+  position: relative;
+  bottom: 0;
+}
+.footer h3 {
+  color: #fec63e;
+  font-size: 1.125em;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+}
+.footer h3::after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background-color: #fec63e;
+  margin: 8px 0 15px 0;
+}
+.footer p {
+  max-width: 400px;
+  margin-bottom: 10px;
+}
+.footer ul li {
+  display: inline-block;
+  border: #fec63e 2px solid;
+  padding: 10px;
+  margin-right: 5px;
+  cursor: pointer;
+}
+.footer ul li:hover {
+  border-color: #fff;
+}
+.copyright {
+  background-color: #fec63e;
+  padding: 20px 0;
+}
+.copyright p {
+  color: #000000;
+  font-size: 1.125em;
+}
+
+/* sobre */
+.sobre {
+  background: url("../img/bg-sobre.jpg") no-repeat center;
+  background-size: cover;
+}
+.missao_sobre {
+  padding-top: 60px;
+}
+.missao_sobre p {
+  font-size: 1.125em;
+  line-height: 1.526em;
+  margin-bottom: 1.125em;
+  padding-right: 60px;
+}
+.missao_sobre ul li {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 1.125em;
+  margin-bottom: 1.125em;
+}
+.foto-equipe {
+  margin-top: 40px;
 }
